[project]
name = "farm-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.2.1",
    "pygame>=2.6.1",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "tyro>=0.9.9",
    "wandb>=0.19.3",
]
